--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "Titus <properllerbucher@gmail.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "dev": "nodemon src/app.ts",
+    "run": "rm -rf dist && nodemon dist/app.js",
+    "auto-compile": "rm -rf dist && tsc -p tsconfig.json --watch",
+    "compile": "rm -rf dist && tsc -p tsconfig.json"
+  },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
@@ -25,6 +31,7 @@
     "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
     "mongoose-timestamp": "^0.6.0",
+    "ms": "^2.1.2",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0"
   }
