--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "express-rate-limit": "^5.0.0",
     "graphql": "^14.5.4",
     "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
