--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-rate-limit": "^5.0.0",
+    "express-session": "^1.16.2",
     "graphql": "^14.5.4",
     "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
