--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "mongoose": "^5.6.11",
     "mongoose-timestamp": "^0.6.0",
     "ms": "^2.1.2",
-    "node-fetch": "^2.6.0",
-    "passport": "^0.4.0"
+    "node-fetch": "^2.6.0"
   }
 }
